--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
      - assets/apple.svg
      - assets/facebook.svg
      - assets/google.svg
-     - assets/boarding.png
+     - assets/bording.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
