--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,10 +62,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/icon.png
+     - assets/Home.png
      - assets/apple.svg
      - assets/facebook.svg
      - assets/google.svg
-     - assets/bording.png
+     
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
